<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_black"
    tools:context=".fragments.MovieDetailFragment">

    <ImageView
        android:id="@+id/iv_trailer"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/trailer" />

    <ImageView
        android:id="@+id/movieDetailPoster"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_trailer"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/poster" />

    <TextView
        android:id="@+id/movieDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/movie_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/movieDetailPoster"
        app:layout_constraintTop_toTopOf="@id/movieDetailPoster" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:rating="4.5"
        android:isIndicator="false"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@id/releaseDate"
        app:layout_constraintStart_toEndOf="@+id/movieDetailPoster" />

    <TextView
        android:id="@+id/releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/release_date"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/movieDetailPoster"
        app:layout_constraintTop_toBottomOf="@+id/movieDetailTitle" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/tv_overview"
        app:layout_constraintTop_toTopOf="@id/tv_overview"
        app:layout_constraintBottom_toBottomOf="@id/tv_overview"/>

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movieDetailPoster"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/overview"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_detail_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_overview" />

</androidx.constraintlayout.widget.ConstraintLayout>