<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400px"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:background="@color/dark_grey">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="300px"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/poster" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="235dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:maxLines="2"
        android:text="@string/movie_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/movie_poster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/release_date"
        android:textColor="@color/design_default_color_secondary_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/movie_title"
        app:layout_constraintVertical_bias="0.87" />
</androidx.constraintlayout.widget.ConstraintLayout>